# LaboratorioProgrammazione

./: CMakeLists.txt  main.cpp
Controllers/: CollectionController.cpp  CollectionController.h  ListController.cpp  ListController.h
InputHandlers/: CollectionInputHandler.cpp  CollectionInputHandler.h  ListInputHandler.cpp  ListInputHandler.h
Model/: Task.cpp  Task.h  TodoList.cpp  TodoList.h  TodoListCollection.cpp  TodoListCollection.h
Observer/: Observer.h  Subject.h
Persistence/: FileHandler.cpp  FileHandler.h
Views/: CollectionView.cpp  CollectionView.h
test/: CMakeLists.txt  CollectionControllerFixture.cpp  CollectionViewFixture.cpp  FileHandlerFixture.cpp  TodoListFixture.cpp  TodoListTest.cpp  runAllTests.cpp
